# audio2text

./: .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  LICENSE  README.md
doc/: intro.md
src/: main.rs
src/audio/: mod.rs
src/hotkey/: mod.rs
src/input/: mod.rs
src/websocket/: mod.rs
