[package]
name = "audio2text"
version = "0.1.0"
edition = "2021"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# WebSocket client
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"

# Audio capture
cpal = "0.15"

# Global hotkey
global-hotkey = "0.6"

# Text input simulation (virtual keyboard for Wayland)
# Using wl-clipboard and ydotool for Wayland compatibility
# These will be called via Command

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# UUID generation
uuid = { version = "1", features = ["v4"] }

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# Ringbuffer for audio
ringbuf = "0.4"

# Channel for hotkey events
crossbeam-channel = "0.5"

# HTTP types for WebSocket
http = "1"
url = "2"
